[fix] #4870 textarea default scrolling is visible in ie

--- a/modules.less
+++ b/modules.less
@@ -310,6 +310,7 @@ nav.half-stamps{
 textarea{
 	width: 100%;
 	height: 130px;
+	overflow: auto;
 }
 
 .centered-text{
